--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                             quê vừa được hưởng nhiều
                             ưu đãi độc quyền dành cho hội viên Thẻ Sành và MBC: càng ăn càng “đã”, càng quẹt càng hời!
                         </div>
-                        <a href="https://menu.phalaerestaurant.com" class="btn-menu">
+                        <a href="https://menu.phanlaerestaurant.com/" class="btn-menu">
                             <span>Xem thực đơn</span>
                             <i class="fas fa-arrow-right arrow-icon"></i>
                         </a>
